@@ -1,5 +1,5 @@
 co.elastic.apm.agent.configuration.StartupInfo
-co.elastic.apm.agent.bci.MatcherTimerLifecycleListener
+co.elastic.apm.agent.bci.InstrumentationStatsLifecycleListener
 co.elastic.apm.agent.metrics.builtin.JvmMemoryMetrics
 co.elastic.apm.agent.metrics.builtin.SystemMetrics
 co.elastic.apm.agent.metrics.builtin.CGroupMetrics
